--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+resources/css/* linguist-vendored
+resources/js/* linguist-vendored
